# DNAStream

./: .gitignore  README.md  TODO.md  mkdocs.yml  pyproject.toml
docs/: index.md  installation.md
docs/api/: dnastream.md  indexmanager.md  io.md  metadata.md  provenance.md  schema.md
docs/design/: CHARTER.md  INVARIANTS.md  MODEL.md  REGISTRY.md  SPECS.md
docs/reference/: schemas.md
docs/tutorials/: 00_quickstart.ipynb  01_dnastream.ipynb  02_registry.ipynb  03_provenance.ipynb  tutorial.ipynb
scripts/: schema_markdown_reference.py
src/: dnastream.py
src/dnastream/: .gitignore  __init__.py  _builtin_schemas.py  _h5base.py  constants.py  datatypes.py  dnastream.py  dnastream_bk.py  enums.py  index_manager.py  io.py  metadata.py  metadata_bk.py  provenance.py  registry.py  schema.py  schema_old.py  schemas.py  table.py  utils.py
src/dnastream/cli/: create.py  main.py
tests/: conftest.py  test_dnastream.py  test_h5dataset.py  test_index_manager.py  test_init.py  test_io.py  test_provenance.py  test_registry.py  test_schema_class.py  test_trees.py
tests/data/: ASCAT.scprofile.txt  AS_ascat_profile.txt  battenberg.tsv  pyclone.tsv  read_counts.csv  sample_metadata.csv  trees.txt
tests/helpers/: h5dataset.py
