[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnastream"
version = "0.1.0"
description = "Efficient DNA sequencing data storage.logging and retrieval"
authors = [{ name = "Leah L. Weber", email = "llweber@mdanderson.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
]

[project.urls]
Homepage = "https://github.mdanderson.org/llweber/DNAStream"
Repository = "https://github.mdanderson.org/llweber/DNAStream"



[tool.setuptools.packages.find]
where = ["src"]
