[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnastream"
version = "0.1.0"
description = "Efficient DNA sequencing data storage.logging and retrieval"
authors = [{ name = "Leah L. Weber", email = "llweber@mdanderson.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "pandas",
    "numpy",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material"
]

[project.urls]
Homepage = "https://github.com/VanLoo-lab/DNAStream"
Repository = "https://github.com/VanLoo-lab/DNAStream"



[tool.setuptools.packages.find]
where = ["src"]
