[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnastream"
version = "0.1.1-beta"
description = "DNAStream is an HDF5-backed, multi-modal data structure for organizing DNA sequencing data and downstream evolutionary analysis. It provides compact on-disk storage, fast partial reads, and a structured way to track entities, links, and changes over time."
authors = [{ name = "Leah L. Weber", email = "llweber@mdanderson.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "h5py",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24"
]

test = [
    "pytest>=7",
]

dev = [
    # convenience bundle for contributors
    "dnastream[docs,test]",
    "black>=24",

]

[project.urls]
Homepage = "https://github.com/VanLoo-lab/DNAStream"
Repository = "https://github.com/VanLoo-lab/DNAStream"



[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dnastream = "dnastream.cli.main:main"
